--- a/main.css
+++ b/main.css
@@ -611,6 +611,38 @@ footer{
     flex-direction: row;
   }
   
+/* FIN FICHE FILM */
+
+/* DÉBUT INSCRIPTION, CONNEXION */
 
 
-  /* FIN FICHE FILM */
+#compartimentInscriptionConnexion{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+
+.cssFormulaire{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 6px;
+  padding-bottom: 20px;
+}
+
+.annuler-enregistrer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding-bottom: 10px;
+}
+
+
+
+/* FIN INSCRIPTION, CONNEXION */
